--- a/package.json
+++ b/package.json
@@ -17,6 +17,24 @@
         "*"
     ],
     "main": "./out/src/extension",
+    "scripts": {
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install"
+    },
+    "devDependencies": {
+        "typescript": "^2.0.6",
+        "vscode": "^1.0.0",
+        "mocha": "^2.3.3",
+        "@types/node": "^6.0.40",
+        "@types/mocha": "^2.2.32"
+    },
+    "homepage": "https://github.com/shirou/emacs-functions/blob/master/README.md",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/shirou/emacs-functions.git"
+	},
+    "preview": true,
     "contributes": {
         "commands": [
             {
@@ -60,6 +78,14 @@
                 "title": "overwrite build-in cursorWordRight"
             },
             {
+               "command": "extension.emacs.cursorPageDown",
+                "title": "overwrite build-in cursorPageDown"
+            },
+            {
+               "command": "extension.emacs.cursorPageUp",
+                "title": "overwrite build-in cursorPageUp"
+            },
+            {
                "command": "extension.emacs.scrollPageDown",
                 "title": "overwrite build-in scrollPageDown"
             },
@@ -82,25 +108,186 @@
             {
                "command": "extension.emacs.cursorBottom",
                 "title": "overwrite build-in cursorBottom"
+            },
+            {
+               "command": "extension.emacs.yank",
+                "title": "yank"
+            },
+            {
+               "command": "extension.emacs.kill-region",
+                "title": "kill-region"
+            },
+            {
+               "command": "extension.emacs.kill-ring-save",
+                "title": "kill-ring-save"
             }
-        ]
-    },
-    "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "devDependencies": {
-        "typescript": "^2.0.6",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
-        "@types/node": "^6.0.40",
-        "@types/mocha": "^2.2.32"
-    },
-    "homepage": "https://github.com/shirou/emacs-functions/blob/master/README.md",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/shirou/emacs-functions.git"
-	},
-    "preview": true
+        ],
+      "keybindings": [
+		{
+          "command": "extension.emacs.set-mark-command",
+          "key": "ctrl+space",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+f",
+          "command": "extension.emacs.cursorRight",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "right",
+          "command": "extension.emacs.cursorRight",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+b",
+          "command": "extension.emacs.cursorLeft",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "left",
+          "command": "extension.emacs.cursorLeft",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+n",
+          "command": "extension.emacs.cursorDown",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "down",
+          "command": "extension.emacs.cursorDown",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+p",
+          "command": "extension.emacs.cursorUp",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "up",
+          "command": "extension.emacs.cursorUp",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+a",
+          "command": "extension.emacs.cursorHome",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "home",
+          "command": "extension.emacs.cursorHome",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+e",
+          "command": "extension.emacs.cursorEnd",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "end",
+          "command": "extension.emacs.cursorEnd",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+[ f",
+          "command": "extension.emacs.cursorWordRight",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+right",
+          "command": "extension.emacs.cursorWordRight",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+[ b",
+          "command": "extension.emacs.cursorWordLeft",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+left",
+          "command": "extension.emacs.cursorWordLeft",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+[ shift+,",
+          "command": "extension.emacs.cursorTop",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+[ shift+.",
+          "command": "extension.emacs.cursorBottom",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+left",
+          "command": "extension.emacs.cursorWordLeft",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+v",
+          "command": "extension.emacs.cursorPageDown",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+[ v",
+          "command": "extension.emacs.cursorPageUp",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "backspace",
+          "command": "extension.emacs.deleteLeft",
+          "when": "editorTextFocus && !editorReadonly"
+		},
+		{
+		  "key": "delete",
+          "command": "extension.emacs.deleteRight",
+          "when": "editorTextFocus && !editorReadonly"
+		},
+		{
+		  "key": "ctrl+/",
+          "command": "undo",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+x u",
+          "command": "undo",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+_",
+          "command": "undo",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+space",
+          "command": "extension.emacs.set-mark-command",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+x ctrl+f",
+          "command": "workbench.action.files.openFileFolder",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+x ctrl+k",
+		  "command": "workbench.action.closeActiveEditor",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+y",
+		  "command": "extension.emacs.yank",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "ctrl+w",
+		  "command": "extension.emacs.kill-region",
+          "when": "editorTextFocus"
+		},
+		{
+		  "key": "meta+w",
+		  "command": "extension.emacs.kill-ring-save",
+          "when": "editorTextFocus"
+		}
+	  ]
+    }
 }
