ctrl+g becomes cancel

--- a/package.json
+++ b/package.json
@@ -353,7 +353,36 @@
 		{
 		  "key": "ctrl+x 2",
 		  "command": "workbench.action.splitEditor"
-		}
+		},
+		{ "key": "ctrl+g",                "command": "editor.action.clearoutput"},
+		{ "key": "ctrl+g",                "command": "extension.emacs.cancelSelection",
+          "when": "editorHasSelection && editorTextFocus" },
+		{ "key": "ctrl+g",                "command": "closeReferenceSearchEditor",
+          "when": "inReferenceSearchEditor && !config.editor.stablePeek" },
+		{ "key": "ctrl+g",                "command": "removeSecondaryCursors",
+          "when": "editorHasMultipleSelections && editorTextFocus" },
+		{ "key": "ctrl+g",                "command": "closeFindWidget",
+          "when": "editorFocus && findWidgetVisible" },
+		{ "key": "ctrl+g",                "command": "closeBreakpointWidget",
+          "when": "breakpointWidgetVisible && editorFocus" },
+		{ "key": "ctrl+g",                "command": "leaveSnippet",
+          "when": "editorTextFocus && inSnippetMode" },
+		{ "key": "ctrl+g",                "command": "closeMarkersNavigation",
+          "when": "editorFocus && markersNavigationVisible" },
+		{ "key": "ctrl+g",                "command": "closeReferenceSearch",
+          "when": "referenceSearchVisible && !config.editor.stablePeek" },
+		{ "key": "ctrl+g",                "command": "closeParameterHints",
+          "when": "editorTextFocus && parameterHintsVisible" },
+		{ "key": "ctrl+g",                "command": "closeQuickFixWidget",
+          "when": "editorFocus && quickFixWidgetVisible" },
+		{ "key": "ctrl+g",                "command": "hideSuggestWidget",
+          "when": "editorTextFocus && suggestWidgetVisible" },
+		{ "key": "ctrl+g",                "command": "cancelRenameInput",
+          "when": "editorFocus && renameInputVisible" },
+		{ "key": "ctrl+g",                "command": "closeAccessibilityHelp",
+          "when": "accessibilityHelpWidgetVisible && editorFocus" },
+		{ "key": "ctrl+g",                "command": "workbench.action.closeMessages",
+          "when": "globalMessageVisible" }
       ]
     }
 }
