--- a/package.json
+++ b/package.json
@@ -159,6 +159,11 @@
           "when": "editorTextFocus"
         },
         {
+          "key": "ctrl+n",
+          "command": "workbench.action.quickOpenNavigateNext",
+          "when": "inQuickOpen"
+        },
+        {
           "key": "down",
           "command": "extension.emacs.cursorDown",
           "when": "editorTextFocus"
@@ -167,6 +172,11 @@
           "key": "ctrl+p",
           "command": "extension.emacs.cursorUp",
           "when": "editorTextFocus"
+        },
+        {
+          "key": "ctrl+p",
+          "command": "workbench.action.quickOpenNavigatePrevious",
+          "when": "inQuickOpen"
         },
         {
           "key": "up",
@@ -336,6 +346,11 @@
           "key": "ctrl+j",
           "command": "editor.action.insertLineAfter",
           "when": "editorTextFocus && !editorReadonly"
+        },
+        {
+          "key": "ctrl+l",
+          "command": "workbench.action.reloadWindow",
+          "when": "editorTextFocus"
         },
 		{
 		  "key": "ctrl+x 0",
