--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^2.0.10",
     "vscode": "^1.0.0",
     "mocha": "^2.3.3",
+    "sinon": "^1.17.6",
     "@types/node": "^6.0.40",
     "@types/mocha": "^2.2.32"
   },
